--- a/Clasificacion_imagenes/WebApplicationML4/WebApplicationML4/Views/ImageClassification/ClasificarImagen.cshtml
+++ b/Clasificacion_imagenes/WebApplicationML4/WebApplicationML4/Views/ImageClassification/ClasificarImagen.cshtml
@@ -7,16 +7,27 @@
 <h1>Clasificar Imagen</h1>
 
 <div class="col-md-4">
-    <form asp-action="Predict">
+    <form asp-action="ClasificarImagen" enctype="multipart/form-data" method="post">
+        <!--<div class="form-group">
+        <label asp-for="ImageData.ImageSource" class="control-label"></label>
+        <input asp-for="ImageData.ImageSource" class="form-control" />
+        <span asp-validation-for="ImageData.ImageSource" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ImageData.Label" class="control-label"></label>
+        <input asp-for="ImageData.Label" class="form-control" />
+        <span asp-validation-for="ImageData.Label" class="text-danger"></span>
+    </div>-->
+        <h1 class="display-4">Seleccionar Imagen</h1>
+        <input type="file" asp-for="ImgFile" />
         <div class="form-group">
-            <label asp-for="ImageData.ImageSource" class="control-label"></label>
-            <input asp-for="ImageData.ImageSource" class="form-control" />
-            <span asp-validation-for="ImageData.ImageSource" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="ImageData.Label" class="control-label"></label>
-            <input asp-for="ImageData.Label" class="form-control" />
-            <span asp-validation-for="ImageData.Label" class="text-danger"></span>
+            <input type="submit" value="Predecir" />
         </div>
     </form>
+</div>
+<div class="col-md-4">
+    <div class="form-group">
+        <label asp-for="ImagePrediction.Prediction" class="control-label"></label>
+        <input asp-for="ImagePrediction.Prediction" class="form-control" readonly="readonly" />
+    </div>
 </div>
